tests/identities/identity_d1/expects/slicing_err.interp.expect
error: Type mismatch in assert_eq: s[31:15] : u17 and DUT.s[31:16] : u16.
   ┌─ tests/identities/identity_d1/slicing_err.prot:13:3
   │
13 │   assert_eq(s[31:15], DUT.s[31:16]);
   │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Type mismatch in assert_eq: s[31:15] : u17 and DUT.s[31:16] : u16.

---CODE---
1
